tests/parser/bad/stmts_t-id-lsqb-spid-rsqb-semicolon.scilla
scilla_version 0

contract Test
()
field one : Uint128 = Uint128 
field map : Map Uint128 Bool = Emp Uint128 Bool

transition arbitrary ()
  map[one] ;
end
